# Vectra

./: .env.example  .gitignore  Database.txt  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  predict.py  pyproject.toml
.github/.workflows/: main.yml
.github/workflows/: azure-static-web-apps-nice-smoke-0cc123703.yml  dev_vectra.yml  main.yml
drawing-app/: package-lock.json  package.json
drawing-app/drawing-app/: package-lock.json  package.json
drawing-app/drawing-app/src/: App.js
drawing-app/drawing-app/src/services/: api_client.js
evalexpr-js/: Cargo.toml
evalexpr-js/src/: lib.rs
server/: .env  .gitignore
server/auth/: models.py  serializers.py  urls.py  views.py
server/authentication/: serializers.py  urls.py  views.py
server/files/: models.py  services.py  urls.py  views.py
server/files/migrations/: 0001_initial.py  0002_file_image.py  0003_alter_file_image.py
server/server/: renderers.py  settings.py  urls.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/evalexpr-js/: evalexpr_js.d.ts  evalexpr_js.js  evalexpr_js_bg.js  evalexpr_js_bg.wasm  evalexpr_js_bg.wasm.d.ts  package.json
web/src/pages/: Applet.tsx  Editor.tsx  Index.tsx  Login.tsx  Signup.tsx
web/src/services/: user.service.tsx
web/src/styles/pages/: _login.page.scss
web/src/util/: AppletSerde.ts  MafsSchema.ts  mafs.zod.ts  useMousePos.ts  useResolution.ts
