[package]
name = "evalexpr-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
evalexpr = { version = "8.1.0", features = ["rand"] }
getrandom = { version = "*", features = ["js"] }
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"